# rusty

./: .env  Cargo.toml  diesel.toml
migrations/2025-09-21-200131-0000_create_users/: up.sql
migrations/2025-09-21-224535-0000_create_posts/: up.sql
src/: main.rs
src/db/: schema.rs
src/handlers/: mod.rs  posts.rs  users.rs
src/models/: user.rs
src/routes/: mod.rs  posts.rs  users.rs
