[package]
name = "own"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = "1.0.226"
serde_json = "1.0.145"
diesel = { version = "2.3.2", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
